--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@ h1{
     text-align: center;
     font-size:xx-large;
 }
+p{
+    text-align: center;
+    font-size: large;
+    color:chocolate;
+}
+
+img{
+    
+    border-radius: 50px;
+   
+    
+}
